--- a/index.html
+++ b/index.html
@@ -50,66 +50,68 @@
 
         <!-- PROJECTS -->
         <div id="main">
+            
             <div id="projects">
+                <!-- <h2 id="project-title">Your Projects</h2> -->
                 <div class="card">
-                    <p class="title"></p>
+                    <p class="title">Viết Journal</p>
                     <p></p>
                 </div>
                 <div class="card">
-                    <p class="title"></p>
+                    <p class="title">Đánh răng</p>
                     <p></p>
                 </div>
                 <div class="card">
-                    <p class="title"></p>
-                    <p></p>
+                    <p class="title">Đọc sách</p>
+                    <p>dqw  </p>
                 </div>
                 <div class="card">
-                    <p class="title"></p>
-                    <p></p>
+                    <p class="title">Tập gym</p>
+                    <p>daw</p>
                 </div>
                 <div class="card">
-                    <p class="title"></p>
-                    <p></p>
+                    <p class="title">Chụp hình</p>
+                    <p>dwda</p>
                 </div>
                 <div class="card">
-                    <p class="title"></p>
-                    <p></p>
+                    <p class="title">Cafe</p>
+                    <p>dasd</p>
                 </div>
             </div>
 
             <!-- ANNOUNCEMENT -->
             <div id="announcement">
                 <div class="noti">
-                    <h3 class="noti-overview"></h3>
-                    <p class="noti-content"></p>
+                    <h3 class="noti-overview">Noti1</h3>
+                    <p class="noti-content">12</p>
                 </div>
                 <div class="noti">
-                    <h3 class="noti-overview"></h3>
-                    <p class="noti-content"></p>
+                    <h3 class="noti-overview">Noti2</h3>
+                    <p class="noti-content">dqwe</p>
                 </div>
                 <div class="noti">
-                    <h3 class="noti-overview"></h3>
-                    <p class="noti-content"></p>
+                    <h3 class="noti-overview">Noti3</h3>
+                    <p class="noti-content">das</p>
                 </div>
             </div>
 
             <!-- TRENDING -->
             <div id="trending">
                 <div class="friend">
-                    <h3 class="friend-account"></h3>
-                    <p class="friend-tier"></p>
+                    <h3 class="friend-account">Hao</h3>
+                    <p class="friend-tier">dadasdw</p>
                 </div>
                 <div class="friend">
-                    <h3 class="friend-account"></h3>
-                    <p class="friend-tier"></p>
+                    <h3 class="friend-account">Ba</h3>
+                    <p class="friend-tier">qweqwe</p>
                 </div>
                 <div class="friend">
-                    <h3 class="friend-account"></h3>
-                    <p class="friend-tier"></p>
+                    <h3 class="friend-account">Me</h3>
+                    <p class="friend-tier">eqweqweqwe</p>
                 </div>
                 <div class="friend">
-                    <h3 class="friend-account"></h3>
-                    <p class="friend-tier"></p>
+                    <h3 class="friend-account">Gold</h3>
+                    <p class="friend-tier">eqweqeqwe</p>
                 </div>
             </div>
         </div>
